# swpecht.github.io

./: .gitignore  .gitmodules  CNAME  _config.yml  euchre-app.code-workspace  liars_poker_bot.code-workspace  open_spiel.code-workspace  phase-10.code-workspace  racoon.code-workspace  running-emu.code-workspace  tree-explorer.code-workspace  whale_singer.code-workspace  wordle_bot.code-workspac.code-workspace
projects/crocodile/: .gitignore  Cargo.toml  README.md  encounter.yaml  rustc-ice-2024-09-18T02_22_29-39617.txt
projects/crocodile/.cargo/: config.toml
projects/crocodile/crates/crocodile/: Cargo.toml
projects/crocodile/crates/crocodile/src/: ai.rs  alloc.rs  game_area.rs  gamestate.rs  hex.rs  lib.rs  main.rs  sim_wrapper.rs
projects/crocodile/crates/crocodile_proc/: Cargo.toml
projects/crocodile/crates/crocodile_proc/src/: lib.rs
projects/crocodile/crates/simulation/: Cargo.toml
projects/crocodile/crates/simulation/src/: ai.rs  gamestate.rs  gs_debug.rs  info.rs  lib.rs  probability.rs
projects/crocodile/sprites/: ram.aseprite  ram.json
projects/crocodile/src/: ai.rs  alloc.rs  gamestate.rs  lib.rs  main.rs  parser.rs  sprite.rs  ui.rs
projects/crocodile/src/sim/: info.rs
projects/crocodile/src/ui/: mod.rs  sprite.rs
projects/jcc/jcc/: Cargo.toml
projects/jcc/jcc/.cargo/: config.toml
projects/jcc/jcc/src/: bluetooth_app.rs  fmt.rs  globals.rs  main.rs
projects/liars_poker_bot/: .gitignore  CLAUDE.md  Cargo.toml  Train.toml  cfres_future_improvements.md  cfres_optimization_progress.md  notebooks.toml
projects/liars_poker_bot/.cargo/: config.toml
projects/liars_poker_bot/benches/: agent_benchmarks.rs  database_benchmarks.rs  euchre_benchmark.rs  game_benchmarks.rs  kuhn_poker_benchmark.rs  open_hand_solver_benchmarks.rs  pimcts_optimizations.rs
projects/liars_poker_bot/crates/card_platypus/: Cargo.toml  build.rs  infostates
projects/liars_poker_bot/crates/card_platypus/benches/: agent_benchmarks.rs  game_benchmarks.rs  node_storage_benchmark.rs  pimcts_optimizations.rs
projects/liars_poker_bot/crates/card_platypus/cuda_graph_shim/: cuda_graph_shim.cpp
projects/liars_poker_bot/crates/card_platypus/examples/: debug_indexer_miss.rs  euchre_cfr_train.rs  euchre_difficulty_benchmark.rs  euchre_epimc_baseline.rs  euchre_gomcts_batch_bench.rs  euchre_gomcts_bootstrap.rs  euchre_gomcts_eval.rs  euchre_gomcts_mcts_sweep.rs  euchre_gomcts_smoke.rs  euchre_gomcts_train.rs  euchre_gomcts_train_batch_bench.rs  kuhn_gomcts_train.rs  migrate_euchre_phf_to_waugh.rs  migrate_indexers_to_msgpack.rs  oh_hell_baseline.rs  oh_hell_benchmark.rs  (+8 more)
projects/liars_poker_bot/crates/client-server-messages/: Cargo.toml
projects/liars_poker_bot/crates/ctrie/: Cargo.toml
projects/liars_poker_bot/crates/euchre-app/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  tailwind.config.js
projects/liars_poker_bot/crates/euchre-fullstack/: Cargo.toml
projects/liars_poker_bot/crates/euchre_server/: Cargo.toml  Dockerfile
projects/liars_poker_bot/crates/games/: Cargo.toml
projects/liars_poker_bot/crates/hand-indexer/: Cargo.toml
projects/liars_poker_bot/crates/ml/: Cargo.toml
projects/liars_poker_bot/crates/oh_hell_server/: Cargo.toml  Dockerfile
projects/liars_poker_bot/crates/web_common/: Cargo.toml
projects/liars_poker_bot/crates/xtask/: Cargo.toml  euchre-server.service  nginx-default
projects/liars_poker_bot/plans/: epimc-gomcts-implementation.md  refactor-plan.md
projects/liars_poker_bot/python/: Open hand pass on bower analysis.ipynb  isomorphic suit analysis.ipynb  llm bot.ipynb  test_file.py
projects/liars_poker_bot/scripts/: eval-eps-bootstrap.sh  oh-hell-collect.sh  setup-libtorch.sh  tournament-eps-bootstrap.sh
projects/liars_poker_bot/src/: agents.rs  bestresponse.rs  cfr_agent.rs  cfragent.rs  cfrcs.rs  database.rs  euchre.rs  game.rs  game_tree.rs  istate.rs  kuhn_poker.rs  liars_poker.rs  lib.rs  main.rs  minimax_agent.rs  outcome_sampling.rs  policy.rs  qagent.rs
projects/liars_poker_bot/src/algorithms/: alphamu.rs  exploitability.rs  ismcts.rs  mod.rs  open_hand_solver.rs  pimcts.rs  tabular_best_response.rs
projects/liars_poker_bot/src/alloc/: mod.rs
projects/liars_poker_bot/src/bestresponse/: alwaysfirsttrainableagent.rs  mod.rs  normalizer.rs  tabular_best_response.rs
projects/liars_poker_bot/src/cfragent/: bestresponse.rs  cfr.rs  cfrcs.rs  cfres.rs  cfrnode.rs  mod.rs
projects/liars_poker_bot/src/collections/: bitarray.rs  diskbackedvec.rs  mod.rs
projects/liars_poker_bot/src/database/: disk_backend.rs  file_backend.rs  io_uring_backend.rs  memory_node_store.rs  mod.rs  node_tree.rs  page.rs  sqlite_backend.rs  tune_page.rs
projects/liars_poker_bot/src/game/: arrayvec.rs  bluff.rs  card_vec.rs  euchre.rs  kuhn_poker.rs  mod.rs  updownriver.rs
projects/liars_poker_bot/src/scripts/: agent_exploitability.rs  benchmark.rs  estimate_euchre_game_tree.rs  mod.rs  pass_on_bower.rs  pass_on_bower_alpha.rs  pass_on_bower_cfr.rs  tune.rs
projects/liars_poker_bot/tests/: algorithm_tests.rs
projects/racoon/: Cargo.toml  README.md
projects/racoon/src/: ai.rs  graphics.rs  input.rs  lib.rs  main.rs  physics.rs  render.rs  ui.rs  units.rs
projects/racoon/src/ai/: graphics.rs  mod.rs
projects/racoon/src/graphics/: mod.rs
projects/racoon/src/simulation/: mod.rs
projects/renderer/: Cargo.toml  README.md
projects/renderer/benches/: bench.rs
projects/renderer/site/: index.html  index.js  package-lock.json  package.json
projects/renderer/src/: lib.rs  rendering.rs  scene.rs
projects/running-emu/: Cargo.toml
projects/running-emu/benches/: path_finding_benchmark.rs  test_path.txt
projects/running-emu/src/: ai.rs  ai_pathing.rs  ecs.rs  graph.rs  lib.rs  main.rs  map.rs  render.rs  spatial.rs
projects/whale_singer/: Cargo.toml  README.md
projects/whale_singer/src/: decode.rs  encode.rs  lib.rs  main.rs  samples.rs
projects/whale_singer/src/app/: mod.rs  waveform.rs
projects/whale_singer/src/metrics/: mod.rs
projects/whale_singer/src/optimization/: chunker.rs  chunks.rs  error.rs  mod.rs
(+383 files in other folders)
