[package]
name = "crocodile"
version = "0.1.0"
edition = "2021"


[dependencies]
clone_from = "0.1.0"
dashmap = "5.5.3"
itertools = "0.13.0"
tinyvec = "1.6.1"
# bumpalo = { version = "3", features = ["allocator_api"] }
# bytemuck = "1.16.1"
# yaml-rust = "0.4.5"
serde = "1.0.204"
serde_yaml = "0.9.34"
anyhow = "1.0.86"

[dependencies.bevy]
features = [
  "dynamic_linking", # Dynamic linking for faster compile-times
  # "wayland",
]
version = "0.14"
# Disable the default features if there are any that you do not want

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable debug data in release build for profiling
[profile.release]
debug = true
