[workspace]
members = ["crates/*"]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable debug data in release build for profiling
[profile.release]
debug = true
