[package]
name = "liars_poker_bot"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
# lto = true # increase compile times for better possible perf

[dependencies]
rand = "0.8"
log = "0.4"
stderrlog = "0.5"
clap = { version = "3.2", features = ["derive"] }
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1" # can be set to human readable for debugging
tempfile = "3.3"
serde-big-array = "0.5"
bumpalo = "3"
rustc-hash = "1.1.0"
memoize = "0.4"
approx = "0.5"
rayon = "1.7"


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "game_benchmarks"
harness = false

