[workspace]
members = ["crates/*"]
resolver = "2"


[profile.release-debug]
inherits = "release"
debug = true

[profile.wasm]
inherits = "release"
debug = false
lto = true
opt-level = 's'

[profile.release]
debug = true
# lto = true # increase compile times for better possible perf

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.10"
log = "0.4"
anyhow = "1.0"
itertools = "0.14"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics"] }