[package]
name = "racoon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Remove dynamic linking for release
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
rand = "0.8"
anyhow = "1.0"