[package]
name = "renderer"
version = "0.1.0"
authors = ["swpecht <steven.pecht@gmail.com>"]
edition = "2018"

[profile.bench]
debug = 1

[lib]
crate-type =  ["lib", "cdylib"] # lib for benchmarks, cdylib for wasm

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2"
nalgebra = "0.27.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]
