[package]
name = "running-emu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.2"
crossterm = "0.22"
itertools = "0.10.0"
hecs = "0.6"
log = "0.4"

[dependencies.sdl2]
version = "0.35"
default-features = true
features = ["gfx"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "path_finding_benchmark"
harness = false

[profile.bench]
debug = true