[package]
name = "whale_singer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.79"
color-eyre = "0.6.2"
crossterm = "0.27.0"
hound = "3.5"
itertools = "0.12.1"
log = "0.4.20"
palette = "0.7.4"
ratatui = "0.26.1"
rustfft = "6.2.0"
sonogram = "0.7.1"
symphonia = { version="0.5", features = ["all-codecs"] }
tui-logger = "0.11.0"
