[package]
edition = "2021"
name = "jcc"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.4.0" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"


#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.8.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"

# Bluetooth dependencies
trouble-host = { path = "../trouble/host" }
bt-hci = "0.2.1"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2", features = ["bluetooth"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "7c49f482d71d594d7b48c3393cc98d03a9e7c9e2" }


[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
