[package]
name = "crocodile"
version = "0.1.0"
edition = "2021"


[dependencies]
crocodile_proc = { path = "../crocodile_proc" }
simulation = { path = "../simulation" }

rand = "0.8"
dashmap = "5.5.3"
itertools = "0.13.0"
json = "0.12.4"


[dependencies.bevy]
features = [
  "dynamic_linking", # Dynamic linking for faster compile-times
  # "wayland",
]
version = "0.15"
