[package]
name = "crocodile"
version = "0.1.0"
edition = "2021"


[dependencies]
simulation = { path = "../simulation" }

rand = "0.8"
itertools = "0.13.0"
json = "0.12.4"


[dependencies.bevy]
features = [
  "dynamic_linking", # Dynamic linking for faster compile-times
  # "wayland",
]
version = "0.15"
