[package]
name = "crocodile_proc"
version = "0.1.0"
edition = "2021"

[lib]
name = "crocodile_proc"
path = "src/lib.rs"
proc-macro = true


# Enable debug data in release build for profiling
[profile.release]
debug = true


[dependencies.proc-macro2]
version = "1.0.74"
features = ["proc-macro"]
default-features = false

[dependencies.quote]
version = "1.0.35"
features = ["proc-macro"]
default-features = false

[dependencies.syn]
version = "2.0.46"
features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"]
