[package]
name = "card_platypus"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
games =  { path = "../games" }

rand = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3" # can be set to human readable for debugging
tempfile = "3.24"
rustc-hash = "2.1.1"
approx = "0.5"
rayon = "1.11"
dashmap = {version = "6.1.0", features = ["serde"]}
indicatif = "0.18.3"
features = {version ="0.10", git = "https://github.com/swpecht/features-rs.git"}
simplelog = "0.12"
anyhow = { workspace = true }
dyn-clone = "1.0"
toml = "0.9"
bitflags = "^2.10"
memmap2 = "0.9.9"
boomphf = {version = "0.6", git = "https://github.com/10XGenomics/rust-boomphf.git", features = ["serde"]}
bytemuck = "1.25"
tinyvec = {version="1.10", features =["serde"]}
# ML stack for the GO-MCTS transformer generative model. Tch (libtorch
# bindings) is the sole backend; CUDA is picked up at runtime when
# libtorch was built against it. Set `LIBTORCH` to a libtorch tree and
# `LIBTORCH_BYPASS_VERSION_CHECK=1` for the tch crate to pick it up; see
# `scripts/setup-libtorch.sh`.
tch = { version = "0.18" }
safetensors = { version = "0.4" }
half = { version = "2" }

[features]
default = []

[build-dependencies]
cc = "1.2"

[dev-dependencies]
criterion = "0.8"

[package.metadata.cargo-machete]
ignored = ["bitflags"]

[[bench]]
name = "game_benchmarks"
harness = false

[[bench]]
name = "agent_benchmarks"
harness = false

[[bench]]
name = "pimcts_optimizations"
harness = false

