[package]
name = "euchre-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
dioxus-router = "0.4"
dioxus-web = "0.4"
card_platypus =  { path = "../card_platypus" }
client-server-messages =  { path = "../client-server-messages" }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
async-std = "1.1"
