[package]
name = "euchre-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
dioxus-router = "0.4"
dioxus-web = "0.4"
games =  { path = "../games" }
client-server-messages =  { path = "../client-server-messages" }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
async-std = "1.1"
futures-util = "0.3"
futures = "0.3"
web-sys = {version = "0.3.64", features = ["Storage", "CssStyleDeclaration"]}
wasm-bindgen = "=0.2.87" # Needed by dioxus
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.6"
wasm-logger = "0.2.0"
js-sys = "0.3.64"
form_urlencoded = "1.2.0"
