[package]
name = "euchre-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-router = "0.4.3"
dioxus-web = "0.4.3"
games =  { path = "../games" }
client-server-messages =  { path = "../client-server-messages" }
getrandom = { version = "0.2", features = ["js"] }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-std = "1.1"
futures-util = "0.3"
web-sys = {version = "0.3.64", features = ["Storage", "CssStyleDeclaration"]}
wasm-bindgen = "0.2.87"
log = { workspace = true }
wasm-logger = "0.2.0"
