[package]
name = "euchre-fullstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-fullstack = "0.4.1"
dioxus-router = "0.4.1"
serde = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
web-sys = {version = "0.3.64", features = ["Storage"], optional = true}
getrandom = { version = "0.2", features = ["js"], optional = true }
rand = "0.8"
card_platypus =  { path = "../card_platypus" }
client-server-messages =  { path = "../client-server-messages" }
async-std = "1.1"
futures-util = "0.3"


[features]
default = []
ssr = ["dioxus-fullstack/axum", "dep:tokio"]
web = ["dioxus-fullstack/web", "dep:web-sys", "dep:getrandom"]
