[package]
name = "euchre_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
card_platypus =  { path = "../card_platypus" }
games =  { path = "../games" }
client-server-messages =  { path = "../client-server-messages" }
rand = { workspace = true }
log = { workspace = true }
simplelog = "0.12"
actix-web-actors = "4.2.0"
actix = "0.13.1"

uuid = { workspace = true }
