[package]
name = "euchre_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
card_platypus =  { path = "../card_platypus" }
games =  { path = "../games" }
rand = { workspace = true }
log = { workspace = true }
simplelog = "0.12"
maud = { version = "0.27", features = ["actix-web"] }
serde = { workspace = true }

uuid = { workspace = true }
