[package]
name = "games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1" # can be set to human readable for debugging
rand = "0.8"
log = "0.4"
itertools = "0.11"
anyhow = "1.0"
dyn-clone = "1.0"
serde-big-array = "0.5"
num-traits = "0.2"
num-derive = "0.4"