[package]
name = "games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
dyn-clone = "1.0"
serde-big-array = "0.5"
num-traits = "0.2"
num-derive = "0.4"
tinyvec = {version="1.10"}
bytemuck = "1.25"