[package]
name = "ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
games =  { path = "../games" }
burn = { version = "0.12", features = ["train", "tui", "wgpu"] }
rand = "0.8.5"
itertools = "0.12.1"
