[package]
name = "oh_hell_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
card_platypus = { path = "../card_platypus" }
games = { path = "../games" }
web_common = { path = "../web_common" }
rand = { workspace = true }
log = { workspace = true }
simplelog = "0.12"
maud = { version = "0.27", features = ["actix-web"] }
serde = { workspace = true }
uuid = { workspace = true }
