[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xshell = "0.2"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
notify = "6.0.1"
itertools = "0.11"
toml = "0.7"
serde = "1.0"